Mobile Column Gap Fix

--- a/src/styles/aside/themeMenu.css
+++ b/src/styles/aside/themeMenu.css
@@ -15,9 +15,9 @@
 
 .theme-switch {
   display: flex;
-  flex-direction: row;
-  height: 3rem;
-  width: 10rem;
+  flex-direction: column;
+  width: 3.5rem;
+  height: 12rem;
   justify-content: space-between;
   border-radius: 1.5rem;
   align-items: center;
@@ -47,36 +47,36 @@
   display: flex;
   background: transparent;
   align-items: center;
-  width: 2.5rem;
-  height: 2.5rem;
-  margin: 0;
+  width: 2.75rem;
+  height: 2.75rem;
   border-radius: 50%;
   justify-content: center;
   cursor: pointer;
+  box-shadow: 0 0 2px 0 rgba(0, 0, 0, .4);
 }
 
 .theme-switch span label svg {
-  fill:transparent;
+  fill: transparent;
   stroke: var(--header-text-before);
-  opacity: .8;
-  height: 1rem;
-  width: 1rem;
+  opacity: 1;
+  height: 1.25rem;
+  width: 1.25rem;
 }
 
 .theme-switch span input:checked + label svg {
-  stroke: #fff;
+  stroke: var(--white1);
 }
 
 .theme-switch span input:checked + label {
-  background: rgba(0, 0, 0, 0.4);
+  background: var(--black1);
 }
 
 .theme-switch span:hover label svg,
 .theme-switch span:focus-visible label svg {
-  stroke: #fff;
+  stroke: var(--black0);
 }
 
 .theme-switch span:hover label,
 .theme-switch span:focus-visible label {
-  background: rgba(0, 0, 0, 0.3);
+  background: var(--white1);
 }
