--- a/src/styles/sections/contact.css
+++ b/src/styles/sections/contact.css
@@ -72,7 +72,6 @@
   margin: 0 auto;
   width: 100%;
   max-width: 1200px;
-  column-gap: 2px;
   border-radius: 20px;
   position: relative;
 }
@@ -343,12 +342,11 @@
 
 .cm-right--bottom__cell-header {
   font-weight: 500;
-  font-size: .8rem;
+  font-size: .825rem;
   display: flex;
   height: 100%;
   width: 100%;
   color: var(--white1);
-  opacity: .9;
   align-items: flex-end;
 }
 
@@ -363,7 +361,7 @@
 .cm-right--bottom__cell-icons {
   display: flex;
   justify-content: flex-end;
-  column-gap: .5rem;
+  height: 100%;
 }
 
 .cm-copy,
@@ -373,9 +371,13 @@
   border-radius: 4px;
   display: flex;
   align-items: center;
-  height: 1.75rem;
-  width: 2rem;
+  height: 2rem;
+  width: 2.5rem;
   justify-content: center;
+}
+
+.cm-copy {
+  margin-left: .5rem;
 }
 
 .cm-copy:hover,
@@ -432,7 +434,7 @@
   .contact-menu__body {
     grid-template-columns: 1fr;
     grid-template-rows: 40% 1fr;
-    row-gap: 12px;
+    /* row-gap: 12px; */
     padding: .25rem;
   }
 
@@ -441,9 +443,6 @@
     display: flex;
     flex-wrap: wrap;
   }
-
-  /* .cm-left,
-  .cm-right {} */
 
   .cm-left__header {
     width: 100%;
@@ -480,14 +479,13 @@
   }
 
   .cm-right--bottom__body {
-    grid-template-columns: repeat(auto-fit, minmax(160px, 1fr));
-    gap: 12px;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
   }
 
-  .cm-copy,
+  /* .cm-copy,
   .cm-email-goto {
     height: 1.5rem;
-  }
+  } */
 }
 
 
